# vault-comparison

./: .gitignore  DESIGN.md  Dockerfile  README.md  REFERENCES.md  context.md
formalization/alloy/: btc_base.als  ccv_vault.als  cross_covenant.als  ctv_vault.als  opvault_vault.als  run_all.sh  threat_model.als  vault_base.als
vault-comparison/: .gitignore  pyproject.toml  run.py  test_opvault_adapter.py
vault-comparison/adapters/: base.py  cat_csfs_adapter.py  ccv_adapter.py  ctv_adapter.py  opvault_adapter.py
vault-comparison/experiments/: __init__.py  exp_address_reuse.py  exp_cat_csfs_cold_key_recovery.py  exp_cat_csfs_destination_lock.py  exp_cat_csfs_hot_key_theft.py  exp_cat_csfs_witness_manipulation.py  exp_ccv_edge_cases.py  exp_fee_pinning.py  exp_fee_sensitivity.py  exp_lifecycle_costs.py  exp_multi_input.py  exp_opvault_recovery_auth.py  exp_opvault_trigger_key_theft.py  exp_recovery_griefing.py  exp_revault_amplification.py  exp_watchtower_exhaustion.py  registry.py
vault-comparison/harness/: coin_pool.py  logging.py  module_loader.py
